apps/base/nextcloud/nextcloud-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: default
  labels:
    app: nextcloud-db
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
  selector:
    app: nextcloud-db
