apps/base/nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
  labels:
    app: nextcloud
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nextcloud
